css/custom/main.css
body > .container {
    padding: 80px 15px 0;
}

.list-group-item {
    border: 0px;
}

.list-inline {
    padding-top: 0.5em;
    padding-bottom: 0.5em;
}

.spacer {
    padding-top: 1em;
    padding-bottom: 1em;
    display: block;
}

